--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Citas medicas</title>
+    <link href="./css/bootstrap.min.css"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="./css/style.css">
 </head>
 
 <body>
-    <div id="app">
-        citas medicas
+    <div id="app"
+        class="flex justify-center items-center h-screen">
     </div>
 </body>
 
-<script src="/js/app.js"></script>
+<script src="js/app.js"></script>
+<script src="./js/bootstrap.bundle.min.js"></script>
 
 </html>
