--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Citas medicas</title>
-    <link href="./css/bootstrap.min.css"
-        rel="stylesheet">
     <link rel="stylesheet"
         href="./css/style.css">
 </head>
 
 <body>
-    <div id="app"
-        class="flex justify-center items-center h-screen">
-    </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#citas">Citas</a></li>
+                <li><a onclick="mostrarMedicos()">Doctores</a></li>
+                <li><a href="#perfil">Perfil</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="app">
+
+    </main>
+    <footer>
+        <p>&copy; 2025 Sistema de Citas Médicas. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 
 <script src="js/app.js"></script>
-<script src="./js/bootstrap.bundle.min.js"></script>
 
 </html>
